--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     
 }
 
+body {
+    background-color: aliceblue;
+}
+
 .supercabecallo {
     background-image: url('images/carrosenfileirados.jpg');
     height: 700px;
@@ -365,6 +369,7 @@ input {
 .ventajas {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .ventajas .precio > img {
@@ -385,11 +390,57 @@ input {
 
 .ventajas .ventajas-banners{
     display: flex;
+    justify-content: space-evenly;
 }
 
 .ventajas .ventajas-banners .precio {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 300px;
-    height: 200px;
+    height: 400px;
+    background-color: white;
+    box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
+    border-radius: 5px;
+    margin: 50px;
+}
+
+.ventajas .ventajas-banners .revisiones {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
+    border-radius: 5px;
+    margin: 50px;
+}
+
+.ventajas .ventajas-banners .prueba {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
+    border-radius: 5px;
+    margin: 50px;
+}
+
+.ventajas .ventajas-banners .finan {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
+    border-radius: 5px;
+    margin: 50px;
 }
