--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ input {
     align-items: center;
     margin-top: 75px;
     margin-bottom: 75px;    
+
 }
 
 .pesquisa > h3 {
@@ -372,6 +373,13 @@ input {
     justify-content: space-between;
 }
 
+.ventajas h2 {
+    margin: auto;
+    margin-top: 50px;
+    font-size: 2em;
+    font-weight: 100;
+}
+
 .ventajas .precio > img {
     height: 100px;
 }
@@ -393,13 +401,21 @@ input {
     justify-content: space-evenly;
 }
 
+.ventajas .ventajas-banners p {
+    text-align: center;
+}
+
+.ventajas .ventajas-banners h3 {
+    text-align: center;
+}
+
 .ventajas .ventajas-banners .precio {
     margin-top: 100px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 300px;
     height: 400px;
+    padding: 20px;
     background-color: white;
     box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
     border-radius: 5px;
@@ -410,9 +426,9 @@ input {
     margin-top: 100px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 300px;
     height: 400px;
+    padding: 20px;
     background-color: white;
     box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
     border-radius: 5px;
@@ -423,9 +439,9 @@ input {
     margin-top: 100px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 300px;
     height: 400px;
+    padding: 20px;
     background-color: white;
     box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
     border-radius: 5px;
@@ -436,9 +452,9 @@ input {
     margin-top: 100px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 300px;
     height: 400px;
+    padding: 20px;
     background-color: white;
     box-shadow: 0px 2px 10px rgba(197, 200, 243, 0.603);
     border-radius: 5px;
